# design-patterns

./: README.md
Code/AdapterPattern/: CMakeLists.txt  README.md  run.sh
Code/AdapterPattern/include/: Duck.hpp  MallardDuck.hpp  Turkey.hpp  TurkeyObjectAdapter.hpp  WildTurkey.hpp
Code/AdapterPattern/src/: MallardDuck.cpp  TurkeyObjectAdapter.cpp  WildTurkey.cpp  main.cpp
Code/CommandPattern/: CMakeLists.txt  README.md  run.sh
Code/CommandPattern/include/: Command.hpp  Remote.hpp
Code/CommandPattern/include/ConcreteCommands/: LightOffCommand.hpp  LightOnCommand.hpp  LivingRoomTVOffCommand.hpp  LivingRoomTVOnCommand.hpp  NoCommand.hpp
Code/CommandPattern/include/Vendors/: Light.hpp  LivingRoomTV.hpp
Code/CommandPattern/src/: Light.cpp  LivingRoomTV.cpp  Remote.cpp  main.cpp
Code/CompositePattern/: CMakeLists.txt  README.md  run.sh
Code/CompositePattern/include/: Menu.hpp  MenuComponent.hpp  MenuItem.hpp
Code/CompositePattern/src/: Menu.cpp  MenuItem.cpp  main.cpp
Code/DecoratorPattern/: CMakeLists.txt  README.md  run.sh
Code/DecoratorPattern/include/: Beverage.hpp  CondimentDecorator.hpp  DarkRoast.hpp  Decaf.hpp  Espresso.hpp  HouseBlend.hpp  Milk.hpp  Mocha.hpp  Soy.hpp  Whip.hpp
Code/DecoratorPattern/src/: Beverage.cpp  DarkRoast.cpp  Decaf.cpp  Espresso.cpp  HouseBlend.cpp  Milk.cpp  Mocha.cpp  Soy.cpp  Whip.cpp  main.cpp
Code/FactoryPattern/: CMakeLists.txt  README.md  run.sh
Code/FactoryPattern/include/: CheesePizza.hpp  ClamsPizza.hpp  Pizza.hpp
Code/FactoryPattern/include/IngredientFactory/: ChicagoPizzaIngredientFactory.hpp  NYPizzaIngredientFactory.hpp  PizzaIngredientFactory.hpp
Code/FactoryPattern/include/Ingredients/Cheese/: Cheese.hpp  MozzarellaCheese.cpp  MozzarellaCheese.hpp  ReggianoCheese.cpp  ReggianoCheese.hpp
Code/FactoryPattern/include/Ingredients/Clams/: Clams.hpp  FreshClams.cpp  FreshClams.hpp  FrozenClams.cpp  FrozenClams.hpp
Code/FactoryPattern/include/Ingredients/Dough/: Dough.hpp  ThickCrustDough.cpp  ThickCrustDough.hpp  ThinCrustDough.cpp  ThinCrustDough.hpp
Code/FactoryPattern/include/Ingredients/Sauce/: MarinaraTomatoSauce.cpp  MarinaraTomatoSauce.hpp  PlumTomatoSauce.cpp  PlumTomatoSauce.hpp  Sauce.hpp
Code/FactoryPattern/include/Store/: ChicagoPizzaStore.hpp  NYPizzaStore.hpp  PizzaStore.hpp
Code/FactoryPattern/src/: CheesePizza.cpp  ClamsPizza.cpp  Pizza.cpp  main.cpp
Code/FactoryPattern/src/IngredientFactory/: ChicagoPizzaIngredientFactory.cpp  NYPizzaIngredientFactory.cpp
Code/FactoryPattern/src/Store/: ChicagoPizzaStore.cpp  NYPizzaStore.cpp  PizzaStore.cpp
Code/IteratorPattern/: CMakeLists.txt  README.md  run.sh
Code/IteratorPattern/include/: DinerMenu.hpp  DinerMenuIterator.hpp  Iterator.hpp  Menu.hpp  MenuItem.hpp  PancakeHouseMenu.hpp  PancakeHouseMenuIterator.hpp  Waitress.hpp
Code/IteratorPattern/src/: DinerMenu.cpp  DinerMenuIterator.cpp  MenuItem.cpp  PancakeHouseMenu.cpp  PancakeHouseMenuIterator.cpp  Waitress.cpp  main.cpp
Code/ObserverPattern/: CMakeLists.txt  README.md  run.sh
Code/ObserverPattern/include/: Display.hpp  GenericDisplay.hpp  Observer.hpp  Subject.hpp  WeatherStation.hpp
Code/ObserverPattern/src/: GenericDisplay.cpp  WeatherStation.cpp  main.cpp
Code/SingletonPattern/: CMakeLists.txt  README.md  run.sh
Code/SingletonPattern/include/: ChocolateBoiler.h
Code/SingletonPattern/src/: ChocolateBoiler.cpp  main.cpp
Code/StatePattern/: CMakeLists.txt  README.md  run.sh
Code/StatePattern/include/: GumballMachine.hpp  HasCoinState.hpp  NoCoinState.hpp  SoldOutState.hpp  SoldState.hpp  State.hpp  WinnerState.hpp
Code/StatePattern/src/: GumballMachine.cpp  HasCoinState.cpp  NoCoinState.cpp  SoldOutState.cpp  SoldState.cpp  WinnerState.cpp  main.cpp
Code/StrategyPattern/: CMakeLists.txt  run.sh
Code/StrategyPattern/include/: Duck.hpp  FlyBehavior.hpp  FlyNoWay.hpp  FlyWithWings.hpp  MallardDuck.hpp  MuteQuack.hpp  Quack.hpp  QuackBehavior.hpp  RubberDuck.hpp  Squeak.hpp
Code/StrategyPattern/src/: Duck.cpp  FlyNoWay.cpp  FlyWithWings.cpp  MallardDuck.cpp  MuteQuack.cpp  Quack.cpp  RubberDuck.cpp  Squeak.cpp  main.cpp
Code/TemplatePattern/: CMakeLists.txt  README.md  install.sh  run.sh
Code/TemplatePattern/include/: CaffeineBeverage.hpp  Coffee.hpp  Tea.hpp
Code/TemplatePattern/src/: Coffee.cpp  Tea.cpp  main.cpp
Theory/: AdapterPattern.md  CommandPattern.md  CompositePattern.md  DecoratorPattern.md  FacadePattern.md  FactoryPattern.md  IteratorPattern.md  ObserverPattern.md  ProxyPattern.md  README.md  SingletonPattern.md  StatePattern.md  StrategyPattern.md  TemplatePattern.md
